# MindEase-AI-Integration

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml
src/: __init__.py
src/mindease/api/: __init__.py  app.py
src/mindease/config/: __init__.py  settings.py
src/mindease/core/: __init__.py  prompts.py
src/mindease/db/: __init__.py  database.py  repository.py
src/mindease/schema/: __init__.py  models.py
src/mindease/services/: __init__.py  chat_service.py
src/mindease/ui/: __init__.py  chainlit_app.py
